tests/en/errors/undefined.salam
// EXPECT: E001
func main: __ undefined_var end
